--- a/VigenereMakerApp/MainWindow.xaml
+++ b/VigenereMakerApp/MainWindow.xaml
@@ -51,7 +51,6 @@
             <RowDefinition Height="25"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="100"></RowDefinition>
-            
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30"></ColumnDefinition>
@@ -59,34 +58,24 @@
             <ColumnDefinition Width="4*"></ColumnDefinition>
             <ColumnDefinition Width="50"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
         <Grid Grid.Row="2" Grid.Column="1">
             <Grid.RowDefinitions>
-                
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
-                
             </Grid.RowDefinitions>
-
-            
             <TextBox Grid.Row="0" Margin="10" FontSize="16" FontWeight="Bold" Foreground="#333"
                      Background="WhiteSmoke"
                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                      Text="{Binding RowPattern, Mode=TwoWay}"></TextBox>
             <Button Grid.Row="1" Margin="15,0,15,10" 
                     Background="#444" Foreground="WhiteSmoke" BorderBrush="#222" BorderThickness="1"
-                    FontSize="14" Command="{Binding SavePattern}" >Save Sequence</Button>
-
+                    FontSize="14" Command="{Binding SavePattern}" >Update Alphabet order</Button>
         </Grid>
-
         <Grid Grid.Row="2" Grid.Column="2">
             <Grid.RowDefinitions>
-                
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
-                
             </Grid.RowDefinitions>
-
             <TextBox Grid.Row="0" Margin="10" FontSize="16" FontWeight="Bold" Foreground="#333"
                      Background="WhiteSmoke"
                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
@@ -94,8 +83,7 @@
             <Button Grid.Row="1" Margin="15,0,15,10" 
                     Command="{Binding SaveParaphrase}" 
                     Background="#444" Foreground="WhiteSmoke" 
-                    FontSize="14" >Save Paraphrase</Button>
-
+                    FontSize="14" >Update Secret Keyword</Button>
         </Grid>
 
         <Grid Grid.Row="1" Grid.Column="2">
