--- a/VigenereMakerApp/MainWindow.xaml
+++ b/VigenereMakerApp/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d" ResizeMode="NoResize"
         DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         Title="{Binding Title}" Height="538.877" Width="800" Icon="favicon.ico">
-    <Grid Background="#999">
+    <Grid Background="#bbb">
         <Grid.Resources>
             <Style x:Key="SquareCell" TargetType="TextBlock">
                 <Setter Property="HorizontalAlignment" Value="Center"></Setter>
@@ -67,7 +67,7 @@
                      Background="WhiteSmoke"
                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                      Text="{Binding RowPattern, Mode=TwoWay}"></TextBox>
-            <Button Grid.Row="1" Margin="10,0,10,10" 
+            <Button Grid.Row="1" Margin="10,0,10,10"
                     Background="#444" Foreground="WhiteSmoke" BorderBrush="#222" BorderThickness="1"
                     FontSize="14" Command="{Binding SavePattern}" >Update Alphabet order</Button>
         </Grid>
@@ -80,9 +80,9 @@
                      Background="WhiteSmoke"
                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                      Text="{Binding Paraphrase, Mode=TwoWay}" ></TextBox>
-            <Button Grid.Row="1" Margin="10,0,10,10" 
-                    Command="{Binding SaveParaphrase}" 
-                    Background="#444" Foreground="WhiteSmoke" 
+            <Button Grid.Row="1" Margin="10,0,10,10"
+                    Command="{Binding SaveParaphrase}"
+                    Background="#444" Foreground="WhiteSmoke"
                     FontSize="14" >Update Secret Keyword</Button>
         </Grid>
 
@@ -211,36 +211,36 @@
             <Grid Grid.Column="1" Grid.RowSpan="26" Background="WhiteSmoke">
 
             </Grid>
-            <Button Grid.Column="1" Grid.Row="0" CommandParameter="0" Style="{StaticResource SquareNavCell}" 
-                       Content="{Binding RowPattern, 
+            <Button Grid.Column="1" Grid.Row="0" CommandParameter="0" Style="{StaticResource SquareNavCell}"
+                       Content="{Binding RowPattern,
                         Converter={StaticResource leglabels}, ConverterParameter='0'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="1" CommandParameter="1" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="1" CommandParameter="1" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='1'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="2" CommandParameter="2" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="2" CommandParameter="2" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='2'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="3" CommandParameter="3" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="3" CommandParameter="3" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='3'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="4" CommandParameter="4" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="4" CommandParameter="4" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='4'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="5" CommandParameter="5" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="5" CommandParameter="5" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='5'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="6" CommandParameter="6" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="6" CommandParameter="6" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='6'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="7" CommandParameter="7" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="7" CommandParameter="7" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='7'}">
 
             </Button>
@@ -264,15 +264,15 @@
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='12'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="13" CommandParameter="13" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="13" CommandParameter="13" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='13'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="14" CommandParameter="14" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="14" CommandParameter="14" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='14'}">
 
             </Button>
-            <Button Grid.Column="1" Grid.Row="15" CommandParameter="15" Style="{StaticResource SquareNavCell}" 
+            <Button Grid.Column="1" Grid.Row="15" CommandParameter="15" Style="{StaticResource SquareNavCell}"
                        Content="{Binding RowPattern, Converter={StaticResource leglabels}, ConverterParameter='15'}">
 
             </Button>
